# hessammehr.github.io

./: .gitignore  .pages.yml  CV.css  CV.foot.html  CV.html  CV.md  CV.md.out  Makefile  _template.html  build.bat  build.ps1  build.sh  config.toml  feed.template.xml  feed.xml  feed.xml.bak  get_pubications.js  github_template.html  hello.py  index.html  index.md  index.md.html  primer.css  pyproject.toml  style.css  update_metrics.py
.github/workflows/: deploy.yml
blog/: index.html  index.md  index.template.md  index.xml  sitemap.xml
blog/categories/: index.html  index.xml
blog/css/: style.css
blog/notebooks/: 2024-12-26-locally-constrained.ipynb  2025-02-23-droplet-generative-process-2.ipynb  2025-07-21-droplet-generative-process-3.ipynb  2025-10-15-live-svi.ipynb  2025-11-26-reparam.ipynb  2025-12-17-uv-on-network-shares.ipynb  2026-01-09-nicer-plots.ipynb
blog/posts/: 2013-12-23-a-new-way-of-doing-chemistry.html  2013-12-23-a-new-way-of-doing-chemistry.md  2013-12-28-funny.html  2013-12-28-funny.md  2019-04-07-fertile-land-at-the-confluence-of-staged-programming-and-typed-logic-programming.html  2019-04-07-fertile-land-at-the-confluence-of-staged-programming-and-typed-logic-programming.md  2020-05-24-lazy-interactive-optimization.html  2020-05-24-lazy-interactive-optimization.md  2020-06-14-rant-against-macros.html  2020-06-14-rant-against-macros.md  2024-12-26-locally-constrained.html  2024-12-26-locally-constrained.md  2024-12-28-droplet-generative-process.html  2025-10-15-live-svi.md  (+27 more)
images/: Heteroradialene structure.cdxml
scripts/: generate_feed.py
(+21 files in other folders)
