[project]
name = "hessammehr-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbconvert>=7.16.4",
    "pillow>=11.0.0",
    "scikit-image>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "numpyro>=0.16.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]
